--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.8",
@@ -73,6 +74,7 @@
     "svgo": "^3.3.2",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
+    "ua-parser-js": "^2.0.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-imp": "^2.4.0",
@@ -94,6 +96,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "memoize-one": "^6.0.0",
     "postcss": "^8.5.6",
